# ozobus

./: CMakeLists.txt
cmake/: ProtoGen.cmake
db/migrations/: 20260617051743_01_init.sql
protos/: auth.proto
src/: ozobus.cc
src/ozobus/services/: auth.cpp  auth.hpp
src/storage/: db.cpp  db.hpp
